# Bolt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  bolt-cst-spec.txt  package-lock.json  package.json  test.bolt  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.prod.js  x.py
.github/: FUNDING.yml
.test-storage/aliases/: lkg
@boltlang/cli/: .browserslistrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
@boltlang/cli/src/: main.ts
@boltlang/compiler/: .gitignore  .npmignore  Makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
@boltlang/compiler/scripts/: bolt.pegjs
@boltlang/compiler/src/: ast-spec.ts  ast.ts  checker.ts  checks.ts  common.ts  constants.ts  constraint-checeker.ts  diagnostics.ts  emitter.ts  evaluator.ts  frontend.ts  ioc.ts  package.ts  parser.ts  program.ts  repl.ts  resolver.ts  scanner.ts  util.ts
@boltlang/compiler/src/test/: parser.ts  types.ts
@boltlang/compiler/src/transforms/: constFold.ts  expand.ts
@boltlang/langserver/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
@boltlang/langserver/src/: main.ts
bootstrap/cxx/: .gitignore  CMakeLists.txt  README.md
bootstrap/cxx/include/bolt/: ByteString.hpp  CST.hpp  CSTVisitor.hpp  Checker.hpp  Common.hpp  ConsolePrinter.hpp  DiagnosticEngine.hpp  Diagnostics.hpp  Evaluator.hpp  Parser.hpp  Scanner.hpp  Stream.hpp  String.hpp  Type.hpp
bootstrap/cxx/src/: CST.cc  Checker.cc  ConsolePrinter.cc  Diagnostics.cc  Evaluator.cc  Parser.cc  Scanner.cc  Text.cc  Types.cc  main.cc
bootstrap/cxx/test/: TestChecker.cc  TestText.cc
bootstrap/cxx/test/checker/: instance_arguments_type_classes.bolt.disabled  nested_vars_reaching_parent_scope.bolt  test_equality_tapp.bolt  variable_mistyping.bolt  wrong_return_type.bolt
bootstrap/js/: package.json
bootstrap/js/compiler/: .gitignore  package-lock.json  tsconfig.json
bootstrap/js/compiler/src/: analysis.ts  c.ts  checker.ts  constraints.ts  cst.ts  diagnostics.ts  emitter.ts  index.ts  parser.ts  scanner.ts  scope.ts  types.ts
bootstrap/js/compiler/src/passes/: TypeclassDictPass.ts
bootstrap/js/compiler/src/test/: eager-solving-global.bolt  mutual-recursion-2.bolt  nested-definitions.bolt  return-types-polymorphic.bolt  typecheck.md
cmake/Modules/: FindLLVM.cmake
compiler/: package-lock.json  package.json  tsconfig.json
compiler/src/: analysis.ts  checker.ts  constraints.ts  cst.ts  diagnostics.ts  emitter.ts  index.ts  parser.ts  program.ts  scanner.ts  scope.ts  solver.ts  types.ts  util.ts
compiler/src/passes/: BoltToC.ts  BoltToJS.ts  TypeclassDictPass.ts
compiler/src/test/: enum-declaration-app.bolt  enum-declaration-maybe.bolt  mutual-recursion.bolt  tuple-access.bolt  unify-similar-records.bolt
include/bolt/: ByteString.hpp  CST.hpp  CSTVisitor.hpp  Checker.hpp  Common.hpp  ConsolePrinter.hpp  DiagnosticEngine.hpp  Diagnostics.hpp  Either.hpp  IPRGraph.hpp  Integer.hpp  Parser.hpp  Program.hpp  Scanner.hpp  Stream.hpp  String.hpp  Text.hpp  Type.hpp
include/bolt/Passes/: CheckBindings.hpp
include/bolt/Support/: Graph.hpp
samples/: bolt.bolt  effect.bolt  todomvc.bolt
scripts/: CST.cc.tply  CST.hpp.tply  gennodes.py  genrewrite.py
spec/: ast.txt
src/: CST.cc  Checker.cc  ConsolePrinter.cc  Diagnostics.cc  Evaluator.cc  IPRGraph.cc  LLVMCodeGen.cc  LLVMCodeGen.hpp  Parser.cc  Program.cc  Scanner.cc  Scope.cc  TestChecker.cc  TestText.cc  Text.cc  Type.cc  Types.cc  analysis.ts  ast-spec.ts  ast-spec.txt  ast.d.ts  ast.js  ast.ts  bindings.ts  cast.ts  checker.ts  checks.ts  cli.ts  codegen.ts  common.ts  compiler.ts  constants.ts  cst.ts  debugServer.ts  di.ts  diagnostics.ts  emitter.ts  evaluator.ts  expander.ts  frontend.ts  (+15 more)
src/Pass/: CheckMissingBindings.cc
src/foreign/: index.ts
src/foreign/js/: parser.ts  scanner.ts
src/parsegen/: parser.d.ts
src/passes/: BoltToC.ts  BoltToJS.ts  TypeclassDictPass.ts
src/test/: type-inference.md  types.ts
src/transforms/: boltToJS.ts  constFold.ts  eliminateModules.ts  expand.ts  index.ts
src/treegen/: ast-template.js  ast.dts.template  ast.ts  index.ts  util.ts
stdlib/: Boltfile  either.bolt  io.bolt  lib.bolt  math.bolt  numbers.bolt  option.bolt  prelude.bolt  string.bolt  syntax.bolt  vec.bolt
stdlib/lang/: bolt.bolt
test/: 000-alpha-identifiers.bolt  001-punct-depth-1.bolt  002-fn-decl-operator.bolt  TestChecker.cc
test-storage/aliases/: lkg
test/checker/: forward_recursion.bolt  if_part_test_is_bool.bolt  local_constraints_polymorphic_variable.bolt  mutual_recursion_is_odd_is_even.bolt  pattern_matching_variant.bolt  simple_instance_arguments.bolt.disabled  simple_tuple_test.bolt  test_equality_tapp.bolt  test_qualified_type_sigs.bolt
test/scan/: 000-bolt-identifier.md  001-bolt-string-literal.md  002-bolt-integer-literal.md
treegen/: Makefile  package-lock.json  package.json  tsconfig.json
treegen/snippets/: ast-before.d.ts  ast-before.js
treegen/src/: ast-generated.js  ast.ts  cli.ts  index.ts  parser.d.ts  parser.pegjs  util.ts
types/: debug.d.ts
vscode-extension/: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: bolt.tmLanguage.json
